# ai_trading_bot

./: .env.example  .env.simulation  .gitignore  Cargo.toml  README.md  crypto-trading-bot-simulation.service  crypto-trading-bot.service  install-service.sh  uninstall-service.sh
src/: ai_advisor.rs  coingecko.rs  config.rs  exchange.rs  main.rs  models.rs  portfolio.rs  simulation.rs  strategy.rs  trade_limiter.rs
